# apiz-sdk

./: .editorconfig  .env.example  .gitignore  .npmrc  .prettierignore  .prettierrc.json  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.changeset/: README.md  add-align-captioning.md  config.json  initial-release.md
.github/workflows/: ci.yml  e2e.yml  release-cli.yml  release-js.yml  release-py.yml  smoke.yml
cli/: .golangci.yml  .goreleaser.yaml  README.md  go.mod  go.sum  install.sh  main.go
cli/cloudflare/: README.md  wrangler.toml
cli/cloudflare/src/: index.js
cli/cmd/: account.go  align.go  auth.go  cmd_test.go  generate.go  models.go  parse.go  root.go  speak.go  tasks.go  transfer.go  upload.go  voices.go
cli/internal/: .gitkeep
cli/internal/api/: align.go  align_test.go  client.go  client_test.go  errors.go  poll.go  poll_test.go  types.go
cli/internal/config/: config.go  config_test.go
cli/internal/output/: format.go  format_test.go
cli/scripts/: build-snapshot.sh  deploy_cli_to_r2.py
docs/: api-reference.md  migration-from-mcp.md  package-naming.md
examples/: README.md
examples/01-generate-image/: cli.sh  index.ts  main.py
examples/02-poll-async-task/: cli.sh  index.ts  main.py
examples/03-parse-and-tts/: cli.sh  index.ts  main.py
examples/04-align-captions/: cli.sh  index.ts  main.py
python/: LICENSE  README.md  pyproject.toml
python/src/apiz/: __init__.py  _errors.py  _helpers.py  _http.py  _types.py  client.py
python/src/apiz/_resources/: __init__.py  account.py  captioning.py  models.py  skills.py  sync_gen.py  tasks.py  tools.py  voices.py
python/tests/: conftest.py  helpers.py  test_smoke.py
python/tests/contract/: test_align.py  test_errors.py  test_http.py  test_models_account_voices.py  test_tasks.py
python/tests/e2e/: .gitkeep  test_live.py
python/tests/integration/: test_helpers.py
tests/fixtures/: README.md
tests/fixtures/errors/: 401_unauthorized.json  402_insufficient_balance.json  404_not_found.json  422_validation_error.json  429_rate_limited.json  500_server_error.json
tests/fixtures/http/: GET__v3_balance.json  GET__v3_mcp_models.json  GET__v3_mcp_models__flux2flash.json  GET__v3_mcp_skills.json  GET__v3_models_docs.json  POST__v3_checkin__already.json  POST__v3_checkin__success.json  POST__v3_minimax_t2a.json  POST__v3_minimax_voices.json  POST__v3_tasks_create__async.json  POST__v3_tasks_create__captioning.json  POST__v3_tasks_create__sync.json  POST__v3_tasks_query__captioning_completed.json  POST__v3_tasks_query__completed.json  POST__v3_tasks_query__failed.json  POST__v3_tasks_query__pending.json  POST__v3_tasks_query__processing.json  POST__v3_tools_parse_video.json  POST__v3_tools_transfer_url.json
tests/fixtures/videos/: public_douyin_url.txt
