[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "apiz"
version = "0.2.0"
description = "Official Python SDK for the apiz.ai AI generation platform"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE*"]
authors = [{ name = "apiz.ai" }]
keywords = [
  "apiz",
  "apiz.ai",
  "ai",
  "ai-api",
  "ai-platform",
  "sdk",
  "python-sdk",
  "async",
  "asyncio",
  "generative-ai",
  "aigc",
  "multimodal",
  "llm-gateway",
  "openai-compatible",
  "image-generation",
  "video-generation",
  "tts",
  "text-to-image",
  "text-to-video",
  "image-to-image",
  "image-to-video",
  "image-edit",
  "speech-synthesis",
  "voice-clone",
  "video-parser",
  "video-downloader",
  "fal-ai",
  "flux",
  "sora",
  "veo",
  "kling",
  "hailuo",
  "seedance",
  "seedream",
  "nano-banana",
  "gemini-image",
  "wan",
  "vidu",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27.0,<1",
  "pydantic>=2.6,<3",
  "typing-extensions>=4.10",
]

[project.urls]
Homepage = "https://apiz.ai"
Documentation = "https://apiz.ai/docs"
Repository = "https://github.com/xuliang2024/apiz-sdk"
Issues = "https://github.com/xuliang2024/apiz-sdk/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
  "respx>=0.21",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/apiz"]

[tool.hatch.build.targets.sdist]
include = ["src/apiz", "tests", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "-m", "not e2e",
]
markers = [
  "e2e: tests that hit the live api.apiz.ai backend (requires APIZ_TEST_API_KEY)",
  "integration: integration tests that exercise the full client across multiple resources (still mocked)",
]

[tool.coverage.run]
source = ["src/apiz"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "RUF",  # ruff-specific
]
ignore = [
  "E501",   # line length handled by formatter
  "UP006",  # keep `Dict`/`List` style for py3.9 runtime compatibility
  "UP007",  # keep `Optional[X]` (PEP 604 needs py3.10+ at runtime)
  "UP045",  # same as UP007 for `X | None`
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
